项目初始化

--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
 	"appid": "wxe7f47a2b77e674ad",
-	"projectname": "%E5%90%AF%E6%98%8E",
+	"projectname": "Venus",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
