--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "启明中学",
     "navigationBarTextStyle": "black"
   }
 }
