--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "pages": [
     "pages/login/login",
-    "pages/exam/exam"    
+    "pages/exam/exam",
+    "pages/student-list/student-list",
+    "pages/student-info/student-info"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#50bba7",
     "navigationBarTitleText": "启明中学",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "White"
   }
 }
