--- a/project.config.json
+++ b/project.config.json
@@ -40,9 +40,10 @@
 			"current": 0,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "exam",
-					"pathName": "pages/exam/exam"
+					"pathName": "pages/subject/subject",
+					"query": ""
 				}
 			]
 		}
