菜单-随机数生成器完成

--- a/project.config.json
+++ b/project.config.json
@@ -42,7 +42,7 @@
 				{
 					"id": 0,
 					"name": "exam",
-					"pathName": "pages/subject-list/subject-list",
+					"pathName": "pages/more/more",
 					"query": ""
 				}
 			]
