细节及BUG的修复
上线

--- a/project.config.json
+++ b/project.config.json
@@ -42,7 +42,7 @@
 				{
 					"id": 0,
 					"name": "exam",
-					"pathName": "pages/more/more",
+					"pathName": "pages/exam/exam",
 					"query": ""
 				}
 			]
